dropped linkprim filter from get_raw_data in compa and put it in process_raw_data

--- a/nbs/01_wrds/01_crspm.ipynb
+++ b/nbs/01_wrds/01_crspm.ipynb
@@ -321,7 +321,7 @@
     "#| export\n",
     "def get_raw_data(\n",
     "        vars: List[str]=None, # If None, downloads `default_raw_vars`; use '*' to get all available variables\n",
-    "        obs_limit: int=None,  #Number of rows to download. If None, full dataset will be downloaded             \n",
+    "        nrows: int=None,  #Number of rows to download. If None, full dataset will be downloaded             \n",
     "        start_date: str=None,          # Start date in MM/DD/YYYY format\n",
     "        end_date: str=None,            # End date in MM/DD/YYYY format  \n",
     ") -> pd.DataFrame:\n",
@@ -338,10 +338,10 @@
     "    sql_string += \"WHERE 1=1 \"\n",
     "    if start_date is not None: sql_string += r\" AND date >= %(start_date)s\"\n",
     "    if end_date is not None: sql_string += r\" AND date <= %(end_date)s\"\n",
-    "    if obs_limit is not None: sql_string += r\" LIMIT %(obs_limit)s\"\n",
+    "    if nrows is not None: sql_string += r\" LIMIT %(nrows)s\"\n",
     "\n",
     "    df = wrds_api.download(sql_string,\n",
-    "                             params={'start_date':start_date, 'end_date':end_date, 'obs_limit':obs_limit})\n",
+    "                             params={'start_date':start_date, 'end_date':end_date, 'nrows':nrows})\n",
     "    \n",
     "    return df "
    ]
@@ -445,7 +445,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "r = get_raw_data(vars = '*', obs_limit=1)\n",
+    "r = get_raw_data(vars = '*', nrows=1)\n",
     "r"
    ]
   },
@@ -504,7 +504,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "r = get_raw_data(vars=['shrout'], obs_limit=100)\n",
+    "r = get_raw_data(vars=['shrout'], nrows=100)\n",
     "r.head(0)"
    ]
   },
