--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -203,7 +203,7 @@
     "#| export\n",
     "def get_raw_data(\n",
     "        vars: List[str]=None, # If None, downloads `default_raw_vars`; use '*' to get all available variables\n",
-    "        obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
+    "        nrows: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
     "        start_date: str=None, # Start date in MM/DD/YYYY format\n",
     "        end_date: str=None #End date in MM/DD/YYYY format\n",
     ") -> pd.DataFrame:\n",
@@ -211,19 +211,30 @@
     " \n",
     "    vars = parse_varlist(vars, prefix='a.')\n",
     "\n",
-    "    sql_string=f\"\"\"SELECT b.lpermno as permno, b.lpermco as permco, b.liid as iid, {vars}\n",
+    "    sql_string=f\"\"\"SELECT b.lpermno as permno, b.lpermco as permco, b.liid as iid, b.linkprim as linkprim, {vars}\n",
     "                    FROM {LIBRARY}.{TABLE} AS a\n",
     "                    INNER JOIN {LINK_LIBRARY}.{LINK_TABLE} AS b ON a.gvkey = b.gvkey\n",
     "                    WHERE datadate BETWEEN b.linkdt AND COALESCE(b.linkenddt, CURRENT_DATE)\n",
-    "                            AND b.linktype IN ('LU','LC') AND b.linkprim IN ('P','C')\n",
+    "                            AND b.linktype IN ('LU','LC') \n",
     "                            AND indfmt='INDL' AND datafmt='STD' AND popsrc='D' AND consol='C'\n",
     "                \"\"\"\n",
     "    if start_date is not None: sql_string += r\" AND datadate >= %(start_date)s\"\n",
     "    if end_date is not None: sql_string += r\" AND datadate <= %(end_date)s\"\n",
-    "    if obs_limit is not None: sql_string += r\" LIMIT %(obs_limit)s\"\n",
-    "\n",
+    "    if nrows is not None: sql_string += r\" LIMIT %(nrows)s\"\n",
+    "    \n",
     "    return wrds_api.download(sql_string,\n",
-    "                             params={'start_date':start_date, 'end_date':end_date, 'obs_limit':obs_limit})"
+    "                             params={'start_date':start_date, 'end_date':end_date, 'nrows':nrows})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `get_raw_data` function will produce identical results to the ones we would obtain if we used the WRDS website (with the default options unchanged). \n",
+    "\n",
+    "It results in no `permno-datadate` duplicates, but there is a small number of `gvkey-datadate` duplicates (about 1% of the data) because each `permno` maps to a unique `gvkey+iid` value and some gvkeys have multiple share classes (different iid's). \n",
+    "\n",
+    "Finally, not that you might want to restrict yourself to `linkprim='P'` (i.e. links only to the primary equity security issued by the firm) which retains about 80% of the data, or `linkprim in ('P','C')` which retains 99% of the data. The latter also results in unique `gvkey-datadate` records which is why we use it as the default option in the `process_raw_data` function."
    ]
   },
   {
@@ -255,13 +266,13 @@
        "      <th>permno</th>\n",
        "      <th>permco</th>\n",
        "      <th>iid</th>\n",
+       "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
        "      <th>fyear</th>\n",
        "      <th>indfmt</th>\n",
        "      <th>consol</th>\n",
        "      <th>popsrc</th>\n",
-       "      <th>datafmt</th>\n",
        "      <th>...</th>\n",
        "      <th>prcc_f</th>\n",
        "      <th>prch_f</th>\n",
@@ -281,13 +292,13 @@
        "      <td>25881.0</td>\n",
        "      <td>23369.0</td>\n",
        "      <td>01</td>\n",
+       "      <td>P</td>\n",
        "      <td>001000</td>\n",
        "      <td>1970-12-31</td>\n",
        "      <td>1970.0</td>\n",
        "      <td>INDL</td>\n",
        "      <td>C</td>\n",
        "      <td>D</td>\n",
-       "      <td>STD</td>\n",
        "      <td>...</td>\n",
        "      <td>10.0</td>\n",
        "      <td>10.875</td>\n",
@@ -302,20 +313,20 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 951 columns</p>\n",
+       "<p>1 rows × 952 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    permno   permco iid   gvkey    datadate   fyear indfmt consol popsrc  \\\n",
-       "0  25881.0  23369.0  01  001000  1970-12-31  1970.0   INDL      C      D   \n",
+       "    permno   permco iid linkprim   gvkey    datadate   fyear indfmt consol  \\\n",
+       "0  25881.0  23369.0  01        P  001000  1970-12-31  1970.0   INDL      C   \n",
        "\n",
-       "  datafmt  ... prcc_f  prch_f prcl_f adjex_f  rank    au  auop  auopic  ceoso  \\\n",
-       "0     STD  ...   10.0  10.875    7.5     1.0  None  None  None    None   None   \n",
+       "  popsrc  ... prcc_f  prch_f prcl_f adjex_f  rank    au  auop auopic  ceoso  \\\n",
+       "0      D  ...   10.0  10.875    7.5     1.0  None  None  None   None   None   \n",
        "\n",
-       "  cfoso  \n",
-       "0  None  \n",
+       "   cfoso  \n",
+       "0   None  \n",
        "\n",
-       "[1 rows x 951 columns]"
+       "[1 rows x 952 columns]"
       ]
      },
      "execution_count": null,
@@ -325,7 +336,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "r = get_raw_data(vars='*', obs_limit=1)\n",
+    "r = get_raw_data(vars='*', nrows=1)\n",
     "r"
    ]
   },
@@ -336,7 +347,7 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
-    "raw = get_raw_data(vars = ['at', 'lt'], start_date='01/01/2021', end_date='01/01/2022', obs_limit=1)"
+    "raw = get_raw_data(vars = ['at', 'lt'], start_date='01/01/2021', end_date='01/01/2022', nrows=1)"
    ]
   },
   {
@@ -368,6 +379,7 @@
        "      <th>permno</th>\n",
        "      <th>permco</th>\n",
        "      <th>iid</th>\n",
+       "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
        "      <th>at</th>\n",
@@ -381,7 +393,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [permno, permco, iid, gvkey, datadate, at, lt]\n",
+       "Columns: [permno, permco, iid, linkprim, gvkey, datadate, at, lt]\n",
        "Index: []"
       ]
      },
@@ -434,13 +446,13 @@
        "      <th>permno</th>\n",
        "      <th>permco</th>\n",
        "      <th>iid</th>\n",
+       "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
        "      <th>cusip</th>\n",
        "      <th>cik</th>\n",
        "      <th>tic</th>\n",
        "      <th>fyear</th>\n",
-       "      <th>fyr</th>\n",
        "      <th>...</th>\n",
        "      <th>intan</th>\n",
        "      <th>pi</th>\n",
@@ -457,15 +469,15 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 85 columns</p>\n",
+       "<p>0 rows × 86 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [permno, permco, iid, gvkey, datadate, cusip, cik, tic, fyear, fyr, naicsh, sich, exchg, lt, at, txditc, pstkl, pstkrv, pstk, csho, ajex, rdip, act, dvc, xad, seq, che, lct, dlc, ib, dvp, txdi, dp, txp, oancf, ivncf, fincf, dltt, mib, ceq, invt, cogs, revt, sale, capx, xrd, txdb, prcc_f, sstk, prstkc, dltis, dltr, emp, dd1, ppegt, ppent, xint, txt, sppe, gdwl, xrent, re, dvpsx_f, tstk, wcap, rect, xsga, aqc, oibdp, dpact, fic, ni, ivao, ivst, dv, intan, pi, txfo, pifo, xpp, drc, drlt, ap, xacc, itcb]\n",
+       "Columns: [permno, permco, iid, linkprim, gvkey, datadate, cusip, cik, tic, fyear, fyr, naicsh, sich, exchg, lt, at, txditc, pstkl, pstkrv, pstk, csho, ajex, rdip, act, dvc, xad, seq, che, lct, dlc, ib, dvp, txdi, dp, txp, oancf, ivncf, fincf, dltt, mib, ceq, invt, cogs, revt, sale, capx, xrd, txdb, prcc_f, sstk, prstkc, dltis, dltr, emp, dd1, ppegt, ppent, xint, txt, sppe, gdwl, xrent, re, dvpsx_f, tstk, wcap, rect, xsga, aqc, oibdp, dpact, fic, ni, ivao, ivst, dv, intan, pi, txfo, pifo, xpp, drc, drlt, ap, xacc, itcb]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 85 columns]"
+       "[0 rows x 86 columns]"
       ]
      },
      "execution_count": null,
@@ -486,10 +498,13 @@
    "source": [
     "#| export\n",
     "def process_raw_data(\n",
-    "        df: pd.DataFrame=None,  # Must contain `permno` and `datadate` columns         \n",
+    "        df: pd.DataFrame=None,  # Must contain `permno` and `datadate` columns   \n",
+    "        linkprim_filter: list=['P','C'],      \n",
     "        clean_kwargs: dict={},  # Params to pass to `pdm.setup_panel` other than `panel_ids`, `time_var`, and `freq`\n",
     ") -> pd.DataFrame:\n",
     "    \"\"\"Applies `pandasmore.setup_panel` to `df`\"\"\"\n",
+    "\n",
+    "    if linkprim_filter: df = df.loc[df['linkprim'].isin(linkprim_filter)].copy()\n",
     "\n",
     "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, **clean_kwargs)\n",
     "    return df "
@@ -536,12 +551,12 @@
        "      <th>dtdate</th>\n",
        "      <th>permco</th>\n",
        "      <th>iid</th>\n",
+       "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
        "      <th>cusip</th>\n",
        "      <th>cik</th>\n",
        "      <th>tic</th>\n",
        "      <th>fyear</th>\n",
-       "      <th>fyr</th>\n",
        "      <th>...</th>\n",
        "      <th>intan</th>\n",
        "      <th>pi</th>\n",
@@ -583,15 +598,15 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 85 columns</p>\n",
+       "<p>0 rows × 86 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [datadate, dtdate, permco, iid, gvkey, cusip, cik, tic, fyear, fyr, naicsh, sich, exchg, lt, at, txditc, pstkl, pstkrv, pstk, csho, ajex, rdip, act, dvc, xad, seq, che, lct, dlc, ib, dvp, txdi, dp, txp, oancf, ivncf, fincf, dltt, mib, ceq, invt, cogs, revt, sale, capx, xrd, txdb, prcc_f, sstk, prstkc, dltis, dltr, emp, dd1, ppegt, ppent, xint, txt, sppe, gdwl, xrent, re, dvpsx_f, tstk, wcap, rect, xsga, aqc, oibdp, dpact, fic, ni, ivao, ivst, dv, intan, pi, txfo, pifo, xpp, drc, drlt, ap, xacc, itcb]\n",
+       "Columns: [datadate, dtdate, permco, iid, linkprim, gvkey, cusip, cik, tic, fyear, fyr, naicsh, sich, exchg, lt, at, txditc, pstkl, pstkrv, pstk, csho, ajex, rdip, act, dvc, xad, seq, che, lct, dlc, ib, dvp, txdi, dp, txp, oancf, ivncf, fincf, dltt, mib, ceq, invt, cogs, revt, sale, capx, xrd, txdb, prcc_f, sstk, prstkc, dltis, dltr, emp, dd1, ppegt, ppent, xint, txt, sppe, gdwl, xrent, re, dvpsx_f, tstk, wcap, rect, xsga, aqc, oibdp, dpact, fic, ni, ivao, ivst, dv, intan, pi, txfo, pifo, xpp, drc, drlt, ap, xacc, itcb]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 85 columns]"
+       "[0 rows x 86 columns]"
       ]
      },
      "execution_count": null,
