--- a/nbs/01_wrds/linking.ipynb
+++ b/nbs/01_wrds/linking.ipynb
@@ -69,11 +69,11 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def gvkey_permno_m(obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
+    "def gvkey_permno_m(nrows: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
     "                   ) -> pd.DataFrame:\n",
     "    \"\"\"CRSP Monthly ids, with gvkeys\"\"\"\n",
     "\n",
-    "    limit_clause = f\"LIMIT {obs_limit}\" if obs_limit is not None else \"\"\n",
+    "    limit_clause = f\"LIMIT {nrows}\" if nrows is not None else \"\"\n",
     "    sql_string=f\"\"\"SELECT a.date, a.permno, c.gvkey\n",
     "                  FROM crsp.msf a\n",
     "                  INNER JOIN crsp.msenames b ON a.permno = b.permno\n",
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
-    "df = gvkey_permno_m(obs_limit=1)"
+    "df = gvkey_permno_m(nrows=1)"
    ]
   },
   {
@@ -165,11 +165,11 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def gvkey_permno_a(obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
+    "def gvkey_permno_a(nrows: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
     "                   ) -> pd.DataFrame:\n",
     "    \"\"\"qvkey to permno correspondence at the annual frequency. As done by CCM.\"\"\"\n",
     "\n",
-    "    limit_clause = f\"LIMIT {obs_limit}\" if obs_limit is not None else \"\"\n",
+    "    limit_clause = f\"LIMIT {nrows}\" if nrows is not None else \"\"\n",
     "    sql_string=f\"\"\"SELECT a.datadate, a.gvkey , b.lpermno as permno\n",
     "                    FROM comp.funda a\n",
     "                    INNER JOIN crsp.ccmxpf_lnkhist  b ON a.gvkey = b.gvkey\n",
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
-    "df = gvkey_permno_a(obs_limit=1)"
+    "df = gvkey_permno_a(nrows=1)"
    ]
   },
   {
@@ -260,11 +260,11 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def gvkey_permno_q(obs_limit : int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
+    "def gvkey_permno_q(nrows : int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
     "                   ) -> pd.DataFrame:\n",
     "    \"\"\"qvkey to permno correspondence at the quarterly frequency. As done by CCM.\"\"\"\n",
     "    \n",
-    "    limit_clause = f\"LIMIT {obs_limit}\" if obs_limit is not None else \"\"\n",
+    "    limit_clause = f\"LIMIT {nrows}\" if nrows is not None else \"\"\n",
     "    sql_string=f\"\"\"SELECT a.datadate, a.gvkey , b.lpermno as permno\n",
     "                    FROM comp.fundq a\n",
     "                    INNER JOIN crsp.ccmxpf_lnkhist  b ON a.gvkey = b.gvkey\n",
@@ -288,7 +288,7 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
-    "df = gvkey_permno_q(obs_limit=1)"
+    "df = gvkey_permno_q(nrows=1)"
    ]
   },
   {
@@ -361,8 +361,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
+    "def ibes_ticker_permno(nrows: int=None):\n",
+    "    if nrows is not None: limit_clause = f' LIMIT {nrows}'\n",
+    "    return wrds_api.download('SELECT * FROM wrdsapps_link_crsp_ibes.ibcrsphist' + limit_clause)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#| eval: false\n",
-    "ibes_permnos = wrds_api.download('SELECT * FROM wrdsapps_link_crsp_ibes.ibcrsphist LIMIT 1')"
+    "ibes_permnos = ibes_ticker_permno(nrows=1)"
    ]
   },
   {
