--- a/nbs/02_papers/hassan_etal_2019.ipynb
+++ b/nbs/02_papers/hassan_etal_2019.ipynb
@@ -47,22 +47,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'RESOURCES' from partially initialized module 'finsets' (most likely due to a circular import) (/home/imb/Dropbox/0research/packages/finsets/finsets/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m/home/imb/Dropbox/0research/packages/finsets/nbs/02_papers/hassan_etal_2019.ipynb Cell 5\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/imb/Dropbox/0research/packages/finsets/nbs/02_papers/hassan_etal_2019.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/imb/Dropbox/0research/packages/finsets/nbs/02_papers/hassan_etal_2019.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandasmore\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpdm\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/imb/Dropbox/0research/packages/finsets/nbs/02_papers/hassan_etal_2019.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfinsets\u001b[39;00m \u001b[39mimport\u001b[39;00m wrds\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/imb/Dropbox/0research/packages/finsets/nbs/02_papers/hassan_etal_2019.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfinsets\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfetch_tools\u001b[39;00m \u001b[39mimport\u001b[39;00m get_text_file_from_url\n",
-      "File \u001b[0;32m~/Dropbox/0research/packages/finsets/finsets/__init__.py:6\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpathlib\u001b[39;00m \u001b[39mimport\u001b[39;00m Path\n\u001b[1;32m      4\u001b[0m PACKAGE_DIR \u001b[39m=\u001b[39m Path(\u001b[39m__file__\u001b[39m)\u001b[39m.\u001b[39mparent\u001b[39m.\u001b[39mparent\n\u001b[0;32m----> 6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m wrds, papers, fred, fetch_tools\n",
-      "File \u001b[0;32m~/Dropbox/0research/packages/finsets/finsets/fred/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mfred\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m fred_api\n",
-      "File \u001b[0;32m~/Dropbox/0research/packages/finsets/finsets/fred/fred.py:15\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandasmore\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpdm\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mfred_api\u001b[39;00m \u001b[39mimport\u001b[39;00m Fred\n\u001b[0;32m---> 15\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m RESOURCES\n\u001b[1;32m     17\u001b[0m \u001b[39m# %% ../../nbs/00_fred/00_fred.ipynb 5\u001b[39;00m\n\u001b[1;32m     18\u001b[0m PROVIDER \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mFederal Reserve Economic Data (FRED)\u001b[39m\u001b[39m'\u001b[39m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'RESOURCES' from partially initialized module 'finsets' (most likely due to a circular import) (/home/imb/Dropbox/0research/packages/finsets/finsets/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| export\n",
     "from __future__ import annotations\n",
@@ -206,12 +191,12 @@
    "source": [
     "#| export\n",
     "def get_raw_data(url: str=URL, \n",
-    "            obs_limit: int=None, # How many rows to download. If None, all rows are downloaded\n",
+    "            nrows: int=None, # How many rows to download. If None, all rows are downloaded\n",
     "            delimiter: str='\\t'\n",
     "            ) -> pd.DataFrame:\n",
     "    \"\"\"Download raw data from `url`\"\"\"\n",
     "\n",
-    "    return get_text_file_from_url(url, nrows=obs_limit, delimiter=delimiter)"
+    "    return get_text_file_from_url(url, nrows=nrows, delimiter=delimiter)"
    ]
   },
   {
@@ -221,7 +206,7 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
-    "raw = get_raw_data(obs_limit=3)"
+    "raw = get_raw_data(nrows=3)"
    ]
   },
   {
@@ -409,7 +394,7 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
-    "df = process_raw_data(raw)"
+    "df = process_raw_data(raw, gvkey_permno_link=False)"
    ]
   },
   {
@@ -441,7 +426,6 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>dtdate</th>\n",
-       "      <th>gvkey</th>\n",
        "      <th>PRisk</th>\n",
        "      <th>NPRisk</th>\n",
        "      <th>Risk</th>\n",
@@ -449,6 +433,7 @@
        "      <th>NPSentiment</th>\n",
        "      <th>Sentiment</th>\n",
        "      <th>PRiskT_economic</th>\n",
+       "      <th>PRiskT_environment</th>\n",
        "      <th>...</th>\n",
        "      <th>Covid_Risk</th>\n",
        "      <th>SARS_Exposure</th>\n",
@@ -462,7 +447,7 @@
        "      <th>Brexit_Risk</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>permno</th>\n",
+       "      <th>gvkey</th>\n",
        "      <th>Qdate</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -489,11 +474,10 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">54594</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">001004</th>\n",
        "      <th>2002Q1</th>\n",
        "      <td>2002-03-31</td>\n",
        "      <td>2002-03-31</td>\n",
-       "      <td>001004</td>\n",
        "      <td>359.55072</td>\n",
        "      <td>2928.6014</td>\n",
        "      <td>168.98235</td>\n",
@@ -501,6 +485,7 @@
        "      <td>5550.5807</td>\n",
        "      <td>469.39542</td>\n",
        "      <td>9001.563</td>\n",
+       "      <td>6331.43</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -517,7 +502,6 @@
        "      <th>2002Q2</th>\n",
        "      <td>2002-06-30</td>\n",
        "      <td>2002-06-30</td>\n",
-       "      <td>001004</td>\n",
        "      <td>0.00000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.00000</td>\n",
@@ -525,6 +509,7 @@
        "      <td>-5656.6074</td>\n",
        "      <td>544.82417</td>\n",
        "      <td>0.000</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -539,36 +524,41 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 37 columns</p>\n",
+       "<p>2 rows × 36 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     date     dtdate   gvkey      PRisk     NPRisk       Risk  \\\n",
-       "permno Qdate                                                                    \n",
-       "54594  2002Q1  2002-03-31 2002-03-31  001004  359.55072  2928.6014  168.98235   \n",
-       "       2002Q2  2002-06-30 2002-06-30  001004    0.00000     0.0000    0.00000   \n",
+       "                     date     dtdate      PRisk     NPRisk       Risk  \\\n",
+       "gvkey  Qdate                                                            \n",
+       "001004 2002Q1  2002-03-31 2002-03-31  359.55072  2928.6014  168.98235   \n",
+       "       2002Q2  2002-06-30 2002-06-30    0.00000     0.0000    0.00000   \n",
        "\n",
-       "               PSentiment  NPSentiment  Sentiment  PRiskT_economic  ...  \\\n",
-       "permno Qdate                                                        ...   \n",
-       "54594  2002Q1   997.86415    5550.5807  469.39542         9001.563  ...   \n",
-       "       2002Q2  1594.73210   -5656.6074  544.82417            0.000  ...   \n",
+       "               PSentiment  NPSentiment  Sentiment  PRiskT_economic  \\\n",
+       "gvkey  Qdate                                                         \n",
+       "001004 2002Q1   997.86415    5550.5807  469.39542         9001.563   \n",
+       "       2002Q2  1594.73210   -5656.6074  544.82417            0.000   \n",
        "\n",
-       "               Covid_Risk  SARS_Exposure  H1N1_Exposure  Zika_Exposure  \\\n",
-       "permno Qdate                                                             \n",
-       "54594  2002Q1           0              0              0              0   \n",
-       "       2002Q2           0              0              0              0   \n",
+       "               PRiskT_environment  ...  Covid_Risk  SARS_Exposure  \\\n",
+       "gvkey  Qdate                       ...                              \n",
+       "001004 2002Q1             6331.43  ...           0              0   \n",
+       "       2002Q2                0.00  ...           0              0   \n",
        "\n",
-       "               Ebola_Exposure  Brexit_Exposure  Brexit_Neg_Sentiment  \\\n",
-       "permno Qdate                                                           \n",
-       "54594  2002Q1               0              NaN                   NaN   \n",
-       "       2002Q2               0              NaN                   NaN   \n",
+       "               H1N1_Exposure  Zika_Exposure  Ebola_Exposure  Brexit_Exposure  \\\n",
+       "gvkey  Qdate                                                                   \n",
+       "001004 2002Q1              0              0               0              NaN   \n",
+       "       2002Q2              0              0               0              NaN   \n",
        "\n",
-       "              Brexit_Pos_Sentiment Brexit_Net_Sentiment Brexit_Risk  \n",
-       "permno Qdate                                                         \n",
-       "54594  2002Q1                  NaN                  NaN         NaN  \n",
-       "       2002Q2                  NaN                  NaN         NaN  \n",
+       "              Brexit_Neg_Sentiment Brexit_Pos_Sentiment Brexit_Net_Sentiment  \\\n",
+       "gvkey  Qdate                                                                   \n",
+       "001004 2002Q1                  NaN                  NaN                  NaN   \n",
+       "       2002Q2                  NaN                  NaN                  NaN   \n",
        "\n",
-       "[2 rows x 37 columns]"
+       "               Brexit_Risk  \n",
+       "gvkey  Qdate                \n",
+       "001004 2002Q1          NaN  \n",
+       "       2002Q2          NaN  \n",
+       "\n",
+       "[2 rows x 36 columns]"
       ]
      },
      "execution_count": null,
